--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 body {
-  background-color: #2e2d4c;
+  font-family: "Lora", serif;
 }
 
 .background {
+  background-image: url(../img/background-foods-v4.png);
+  background-color: #2e2d4c;
+  background-attachment: fixed;
 }
 
 .cabecalho {
   text-align: center;
   color: #ffffff;
-  margin: 100px auto;
+  margin: auto;
   padding: 30px;
 }
 
@@ -22,6 +25,7 @@ body {
   margin: 8% auto;
   padding: 5%;
   border-radius: 10px;
+  line-height: 3rem;
 }
 
 .navigation li {
@@ -47,10 +51,11 @@ body {
   text-decoration: underline;
 }
 
-.conteudo img {
+.avatar {
   float: left;
   width: 140px;
   padding: 20px;
+  margin-right: 20px;
 }
 
 .fonte--media {
@@ -60,4 +65,28 @@ body {
 .titulo {
   font-size: 1.9rem;
   margin-top: 50px;
+}
+
+.titulo--fonte {
+  font-family: "Exo 2", sans-serif;
+}
+
+.habilidades label {
+  width: 280px;
+  display: inline-block;
+}
+
+.habilidades progress {
+  accent-color: #2e2d4c;
+}
+
+.fotos img {
+  width: 450px;
+  height: 240px;
+  border-radius: 8px;
+  filter: grayscale(0.4);
+}
+
+.fotos img:hover {
+  filter: none;
 }
