--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,25 @@ body {
   margin-right: 20px;
 }
 
+.fonte--grande {
+  font-size: 3.2rem;
+}
+
 .fonte--media {
   font-size: 1.7rem;
+}
+
+.fonte--pequena {
+  font-size: 1.2rem;
 }
 
 .titulo {
   font-size: 1.9rem;
   margin-top: 50px;
+}
+
+.subtitle--color {
+  color: #a3a3a3;
 }
 
 .titulo--fonte {
@@ -151,4 +163,36 @@ body {
   margin-right: 50%;
   transform: translateX(50%) rotate(45deg);
   margin-top: -50px;
+}
+
+@media (max-width: 720px) {
+  body {
+    position: absolute;
+  }
+
+  .logo img {
+    width: 130px;
+  }
+
+  .fonte--grande {
+    font-size: 2.6rem;
+  }
+
+  .fonte--media {
+    font-size: 1.5rem;
+  }
+
+  .fonte--pequena {
+    font-size: 1.2rem;
+  }
+
+  .navigation li {
+    width: 120px;
+    font-size: 1.1rem;
+    text-align: center;
+  }
+
+  .avatar {
+    width: 130px;
+  }
 }
